# bngtester

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml  feature.yml  testing.yml
.github/workflows/: publish-images.yml
context/: PROCESS.md  SUMMARY.md
context/specs/0-bootstrap/: DECISIONS.md  README.md
context/specs/1-alpine-subscriber-image/: DECISIONS.md  IMPLEMENTATION_SPEC.md  README.md
context/specs/13-robot-framework/: DECISIONS.md  IMPLEMENTATION_SPEC.md  README.md
context/specs/2-ci-publish-dockerhub/: DECISIONS.md  IMPLEMENTATION_SPEC.md  README.md
docs/: CONFIGURATION.md
examples/: bare-metal-loopback.yaml  latency-test.yaml  multi-dscp-qos.yaml  multi-subscriber-server.yaml  rrul-bufferbloat.yaml
images/alpine/: Dockerfile
images/debian/: Dockerfile
images/shared/: entrypoint.sh
images/ubuntu/: Dockerfile
lab/: README.md  bngtester.clab.yml  smoke-test.sh
lab/config/bng1/: osvbng.yaml
src/: config.rs  dscp.rs  lib.rs  socket.rs
src/metrics/: jitter.rs  latency.rs  loss.rs  mod.rs  throughput.rs  timeseries.rs
src/protocol/: clock.rs  mod.rs  session.rs
src/report/: json.rs  jsonl.rs  junit.rs  mod.rs  text.rs
src/stream/: config.rs  mod.rs
src/traffic/: generator.rs  mod.rs  packet.rs  receiver.rs  tcp.rs
tests/: common.robot  rf-run.sh  subscriber.robot
tests/01-entrypoint-validation/: 01-entrypoint-validation.robot
tests/02-vlan-modes/: 02-vlan-modes.robot
tests/03-cleanup/: 03-cleanup.robot
tests/04-ipoe-bng/: 04-ipoe-bng.robot
(+86 files in other folders)
